--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "3.x",
     "socket.io": "0.9.11",
-    "socket.io-client": "0.9.11"
+    "socket.io-client": "0.9.11",
+    "redis-url": "0.1.0"
   },
   "engines": {
     "node": "0.8.x",
